--- a/Index.html
+++ b/Index.html
@@ -12,9 +12,9 @@
     <section class="cuerpo">
         <form action=""> 
             <label for="InputNum1"></label>
-            <input id="InputNum1" type="number">
+            <input id="InputNum1" type="number" value="0">
             <label for="InputNum2"></label>
-            <input id="InputNum2" type="number">
+            <input id="InputNum2" type="number" value="0">
             <select name="slc" id="slct" onchange="onGetnumber()">
                 <option>...</option>
                 <option value="1">Suma</option>
